[tool.poetry]
name = "pilibre"
version = "0.1.0"
description = "Display hardware metrics from LibreHardwareMonitor, intended to be run on a small screen on a RaspberryPi."
authors = ["acbuie <aidancbuie@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pilibre", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
rich = "^13.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ruff = "^0.0.212"
mypy = "^0.991"
black = "^22.12.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pilibre = "pilibre.main:main"

[tool.black]
target-version = ["py311"]

[tool.mypy]
pretty = true
strict = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I001", "N"]
unfixable = ["F401"]
